<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">authentication</string>
    <string name="introducting">Here you can buy or sell any products that you like, absolutely free. IEshop : shopping for every day</string>
    <string name="welcome_to_ieshop">Welcome to IEshop !</string>
    <string name="get_started">GET STARTED</string>
    <string name="username">Username</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back, you’ve been missed!</string>
    <string name="let_s_sign_you_in">Let’s Sign You In</string>
    <string name="password">••••••</string>
    <string name="password_title">Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="sign_up_big">SIGN UP</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sing_in">Sing in</string>
    <string name="email">Email</string>
    <string name="surname">Surname</string>
    <string name="telephone">Telephone</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our</string>
    <string name="term_conditions">Term &amp; Conditions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_authentication">OTP Authentication</string>
    <string name="an_authentication_code_has_been">An authentication code has been</string>
    <string name="sent_to_61_0486935279">sent to (+61) 0486935279</string>

    <!-- Errors -->
    <string name="WrongCredentialsLoginError">Error wrong credentials</string>
    <string name="WrongEmailError">Error wrong email</string>
    <string name="DatabaceError">Error width Database need to contact width support </string>
    <string name="SuccessLogin">Your erroe was success </string>


    <string name="facebook_app_id">784766852644754</string>
    <string name="fb_login_protocol_scheme">fb784766852644754</string>
    <string name="facebook_client_token">4d289b9543113d3c870204f24916b0e3</string>



</resources>