<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="@string/otp_authentication"

        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/an_authentication_code_has_been"
        android:textColor="#515151"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/Your_numer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/sent_to_61_0486935279"
        android:textColor="#515151"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        android:maxLength="1"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Your_numer"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumberSigned2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        android:maxLength="1"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned3"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberSigned"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumberSigned3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        android:maxLength="1"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberSigned4"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned2"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberSigned"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextNumberSigned4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        android:maxLength="1"
        android:minHeight="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned3"
        app:layout_constraintTop_toTopOf="@+id/editTextNumberSigned"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/continue_button"
        style="@style/buttonStyle"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/continue_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:text="CONTINUE"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/long_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>